# auxoscloud_fastapi

./: .env.sample  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.woodpecker/: .build.yml  .build_arm64.yml  .deploy.yml  .lint.yml
api/auxos/: __init__.py
api/auxos/repo/: __init__.py  analytics.py  auth.py  inverter.py
config/: __init__.py  models.py
